tests/parser/syntax-errors/expected-expr/expected_expr_unary.choc
# RUN: choco-opt "%s" | filecheck "%s"

-

# CHECK:      SyntaxError (line 3, column 2): Expected expression.
# CHECK-NEXT: >>>-
# CHECK-NEXT: >>>-^
